2013-01-30  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-process-connection-type): Fix docstring.
	(tramp-completion-reread-directory-timeout): Fix type.
	(tramp-connection-min-time-diff): New defcustom.

	* net/tramp-sh.el (tramp-maybe-open-connection): Use it.

2013-01-30  Glenn Morris  <rgm@gnu.org>

	* imenu.el (imenu-default-create-index-function):
	Put back a version of the infinite loop test removed 2013-01-23.

2013-01-30  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-shell-parse-command): Find
	python-shell-interpreter with modified environment.

2013-01-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl.el (cl-set-getf): Add compatibility alias.

2013-01-29  Alan Mackenzie  <acm@muc.de>

	Amend to fontify /regexp/s in actions correctly.
	* cc-awk.el (c-awk-harmless-char-re, c-awk-harmless-string*-re):
	(c-awk-harmless-string*-here-re): braces, parens and semicolons
	are no longer included.
	(c-awk-harmless-line-char-re, c-awk-harmless-line-string*-re):
	What used to be these variables without "-line" in the name.
	(c-awk-neutral-re): { is no longer neutral.  Escaped newlines now
	are.
	(c-awk-non-arith-op-bra-re): Now also matches {.
	(c-awk-pre-exp-alphanum-kwd-re): New regexp to match "print",
	"return", and "case".
	(c-awk-kwd-regexp-sign-re): New, to match "print", etc., followed
	by /.
	(c-awk-syntax-tablify-/): Check special cases "print /re/", etc.
	(c-awk-set-syntax-table-properties): Extend FSM to handle
	{,},(,),;.

2013-01-29  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-use-notify): Use
	`custom-initialize-default' for initialization.  (Bug#13583)

	* net/ange-ftp.el (ange-ftp-skip-msgs): Add another message.

	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Catch
	`suppress'.  Otherwise, `tramp-run-real-handler' might be called
	in `tramp-file-name-handler'.
	(tramp-gw-tunnel-method, tramp-gw-socks-method): Declare for
	compatibility.