@@ -1,3 +1,9 @@
+2013-01-30  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc-units.el (math-default-units-table): Remove initial value.
+	(calc-convert-units): Treat expressions where all the units cancel as
+	if they didn't have units.
+
 2013-01-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-process-connection-type): Fix docstring.
